--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,64 @@ add_library(palabos STATIC ${PALABOS_SRC} ${EXT_SRC})
 
 ###############################################################################
 
+# To link palabos in directories other than this
+cmake_policy(SET CMP0079 NEW)
+
+# codesByTopic
+add_subdirectory(examples/benchmarks/cavity3d)
+
+# codesByTopic
+add_subdirectory(examples/codesByTopic/asinariDynamics)
+add_subdirectory(examples/codesByTopic/bounceBack)
+add_subdirectory(examples/codesByTopic/boundaryCondition)
+add_subdirectory(examples/codesByTopic/complexNumbers)
+add_subdirectory(examples/codesByTopic/coProcessor)
+add_subdirectory(examples/codesByTopic/copying)
+add_subdirectory(examples/codesByTopic/couplings)
+add_subdirectory(examples/codesByTopic/cutTriangularSurface)
+add_subdirectory(examples/codesByTopic/d3q13)
+add_subdirectory(examples/codesByTopic/dataAnalysis)
+add_subdirectory(examples/codesByTopic/dotList)
+add_subdirectory(examples/codesByTopic/dynamicsInfo)
+add_subdirectory(examples/codesByTopic/externalMacroscopicVariables)
+add_subdirectory(examples/codesByTopic/io)
+add_subdirectory(examples/codesByTopic/linearAlgebra)
+add_subdirectory(examples/codesByTopic/marchingCube)
+add_subdirectory(examples/codesByTopic/multiBlock)
+add_subdirectory(examples/codesByTopic/navierStokesModels)
+add_subdirectory(examples/codesByTopic/particlesInTube)
+add_subdirectory(examples/codesByTopic/reparallelize)
+add_subdirectory(examples/codesByTopic/scalarField)
+add_subdirectory(examples/codesByTopic/shanChenMultiPhase)
+add_subdirectory(examples/codesByTopic/smagorinskyModel)
+add_subdirectory(examples/codesByTopic/transientStatistics)
+add_subdirectory(examples/codesByTopic/userInput)
+
 # showCases
+add_subdirectory(examples/showCases/aneurysm)
+add_subdirectory(examples/showCases/bloodFlowDefoBodies)
+add_subdirectory(examples/showCases/boussinesqThermal2d)
+add_subdirectory(examples/showCases/boussinesqThermal3d)
+add_subdirectory(examples/showCases/carreauPoiseuille)
 add_subdirectory(examples/showCases/cavity2d)
 add_subdirectory(examples/showCases/cavity3d)
+add_subdirectory(examples/showCases/collidingBubbles3d)
+add_subdirectory(examples/showCases/cylinder2d)
+add_subdirectory(examples/showCases/externalFlowAroundObstacle)
+add_subdirectory(examples/showCases/generalExternalFlow)
+add_subdirectory(examples/showCases/gridRefinement2d)
+add_subdirectory(examples/showCases/gridRefinement3d)
+add_subdirectory(examples/showCases/heatedObjectInChannel)
+add_subdirectory(examples/showCases/movingWall)
+add_subdirectory(examples/showCases/multiComponent2d)
+add_subdirectory(examples/showCases/multiComponent3d)
+add_subdirectory(examples/showCases/particlesInCone)
+add_subdirectory(examples/showCases/poiseuille)
+add_subdirectory(examples/showCases/rectangularChannel3d)
+add_subdirectory(examples/showCases/vofMultiPhase)
+add_subdirectory(examples/showCases/womersley)
+
+# tutorial
+add_subdirectory(examples/tutorial/permeability)
+add_subdirectory(examples/tutorial/tutorial_1)
+add_subdirectory(examples/tutorial/tutorial_2)
