--- a/examples/benchmarks/cavity3d/CMakeLists.txt
+++ b/examples/benchmarks/cavity3d/CMakeLists.txt
@@ -1,3 +1,29 @@
+if(CI)
+###############################################################################
+
+set(EXECUTABLE_NAME "cavity3d")
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
+###############################################################################
+
+set(PROJECT_NAME "cavity3d_benchmark")
+add_executable(${PROJECT_NAME} "./${EXECUTABLE_NAME}.cpp")
+
+# Link with the following libraries
+target_link_libraries(${PROJECT_NAME} palabos)
+if(ENABLE_MPI)
+    target_link_libraries(${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+endif()
+
+###############################################################################
+
+# This returns when you compile Palabos and all the examples (root CMakeLists.txt)
+return()
+
+###############################################################################
+endif()
+
 cmake_minimum_required(VERSION 2.8.12)
 
 project(palabosBenchmark)
