--- a/examples/showCases/cavity3d/CMakeLists.txt
+++ b/examples/showCases/cavity3d/CMakeLists.txt
@@ -7,12 +7,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 ###############################################################################
 
-add_executable(${EXECUTABLE_NAME} "./${EXECUTABLE_NAME}.cpp")
+get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+add_executable(${PROJECT_NAME} "./${EXECUTABLE_NAME}.cpp")
 
 # Link with the following libraries
-target_link_libraries(${EXECUTABLE_NAME} palabos)
+target_link_libraries(${PROJECT_NAME} palabos)
 if(ENABLE_MPI)
-    target_link_libraries(${EXECUTABLE_NAME} ${MPI_CXX_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 endif()
 
 ###############################################################################
