--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: omalaspinas/palabos:latest
+
 # This file is a template, and might need editing before it works on your project.
 # use the official gcc image, based on debian
 # can use verions as well, like gcc:5.2
