--- a/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
+++ b/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
@@ -49,6 +49,12 @@ endif()
 
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
+    message("ccache used.")
+endif()
+
 project(bloodFlowDefoBodies)
 
 enable_language(CXX)
@@ -75,16 +81,16 @@ message(${CMAKE_BUILD_TYPE})
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     message("GCC.")
     if(CYGWIN)
-        set(CMAKE_CXX_FLAGS "-Wa,-mbig-obj -std=c++11 -Wall -Wnon-virtual-dtor")
+        set(CMAKE_CXX_FLAGS "-Wa,-mbig-obj -std=c++11 -Wall  -Wextra -Wnon-virtual-dtor")
     else()
         set(CMAKE_CXX_FLAGS "-std=c++11 -w")
-        #set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
+        #set(CMAKE_CXX_FLAGS "-std=c++11 -Wall  -Wextra -Wnon-virtual-dtor")
     endif()
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
     message("Clang.")
-    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
+    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall  -Wextra -Wnon-virtual-dtor")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
