--- a/examples/showCases/cylinder2d/CMakeLists.txt
+++ b/examples/showCases/cylinder2d/CMakeLists.txt
@@ -26,6 +26,12 @@ endif()
 
 cmake_minimum_required(VERSION 2.8.12)
 
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
+    message("ccache used.")
+endif()
+
 project(palabosExample)
 enable_language(CXX)
 
