removed compilation for bloodFlowDefoBodies if mpi is disabled. corrected hdf5 wuth sequential compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,11 @@ add_subdirectory(examples/codesByTopic/userInput)
 add_subdirectory(examples/codesByTopic/aneurysm_xdmf_hdf5_output)
 # showCases
 add_subdirectory(examples/showCases/aneurysm)
-add_subdirectory(examples/showCases/bloodFlowDefoBodies)
+if(ENABLE_MPI)
+    add_subdirectory(examples/showCases/bloodFlowDefoBodies)
+else()
+    message("Without MPI enabled bloodFlowDefoBodies cannot be compiled!")
+endif()
 add_subdirectory(examples/showCases/boussinesqThermal2d)
 add_subdirectory(examples/showCases/boussinesqThermal3d)
 add_subdirectory(examples/showCases/carreauPoiseuille)
