--- a/examples/codesByTopic/aneurysm_xdmf_hdf5_output/CMakeLists.txt
+++ b/examples/codesByTopic/aneurysm_xdmf_hdf5_output/CMakeLists.txt
@@ -9,7 +9,7 @@ if(BUILD_HDF5)
 	set(HDF5_PREFER_PARALLEL ON)
 	find_package(HDF5 REQUIRED )
 	if(HDF5_FOUND)
-		if(HDF5_IS_PARALLEL)
+		if(HDF5_IS_PARALLEL AND ENABLE_MPI)
 			message("HDF5 PARALLEL FOUND")
 			add_definitions(-DHDF5)
 		else()
