--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,18 @@
 version: 1.0.{build}
 branches:
   only:
-  - warnings
+  - appveyor
+install:
+- pwsh: >-
+    $msmpidl = 'https://download.microsoft.com/download/2/9/e/29efe9b1-16d7-4912-a229-6734b0c4e235/msmpisdk.msi'
+
+    Start-FileDownload $msmpidl -FileName msmpisdk.msi
+
+    Downloading msmpisdk.msi (2,543,616 bytes)...100%
+
+    msiexec /i "C:\projects\palabos\msmpisdk.msi" /qn /norestart /log install.log
+
+    sleep 5; restart-computer -f; sleep 5
 build_script:
 - pwsh: >-
     cd C:\projects\palabos\build
