--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ build_script:
 - pwsh: >-
     cd C:\projects\palabos\build
 
-    cmake ..
+    cmake .. -DBUILD_HDF5=OFF
 
     cmake --build . -j4
 test: off
