--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,16 +2,25 @@ version: 1.0.{build}
 branches:
   only:
   - appveyor
-image: Previous Visual Studio 2019
+
+image: 
+  - Previous Visual Studio 2019
+  - macOS
+
 install:
 - pwsh: >-
-    $msmpidl = 'https://download.microsoft.com/download/2/9/e/29efe9b1-16d7-4912-a229-6734b0c4e235/msmpisdk.msi'
+    if ($isWindows) {
+      $msmpidl = 'https://download.microsoft.com/download/2/9/e/29efe9b1-16d7-4912-a229-6734b0c4e235/msmpisdk.msi'
 
-    Start-FileDownload $msmpidl -FileName msmpisdk.msi
+      Start-FileDownload $msmpidl -FileName msmpisdk.msi
 
-    msiexec /i "C:\projects\palabos\msmpisdk.msi" /qn /norestart /log install.log
+      msiexec /i "C:\projects\palabos\msmpisdk.msi" /qn /norestart /log install.log
 
-    sleep 5; restart-computer -f; sleep 5
+      sleep 5; restart-computer -f; sleep 5
+    } else {
+      brew install open-mpi
+    }
+    
 build_script:
 - pwsh: >-
     cd C:\projects\palabos\build
