--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,13 @@ image:
 install:
 - pwsh: >-
     if ($isWindows) {
-      
+      $msmpidl = 'https://download.microsoft.com/download/2/9/e/29efe9b1-16d7-4912-a229-6734b0c4e235/msmpisdk.msi'
+
+      Start-FileDownload $msmpidl -FileName msmpisdk.msi
+
+      msiexec /i "C:\projects\palabos\msmpisdk.msi" /qn /norestart /log install.log
+
+      sleep 5; restart-computer -f; sleep 5
     } else {
       brew install open-mpi
     }
@@ -18,7 +24,7 @@ install:
 build_script:
 - pwsh: >-
     if ($isWindows) {
-        
+        cd C:\projects\palabos\build
     } else {
         cd build
     }
