--- a/examples/showCases/rectangularChannel3d/CMakeLists.txt
+++ b/examples/showCases/rectangularChannel3d/CMakeLists.txt
@@ -17,9 +17,10 @@ if(ENABLE_MPI)
 endif()
 
 if(BUILD_TESTING)
-    add_custom_target(run_test_${NICE_SOURCE_DIR}
-        DEPENDS ${EXECUTABLE_NAME}
-        COMMAND ${EXECUTABLE_NAME} 10 > test/output.dat
+    add_custom_target(${PROJECT_NAME}_test
+        ALL
+        DEPENDS ${PROJECT_NAME}
+        COMMAND ${PROJECT_NAME} 10 > test/output.dat
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
