--- a/examples/showCases/vofMultiPhase/CMakeLists.txt
+++ b/examples/showCases/vofMultiPhase/CMakeLists.txt
@@ -17,9 +17,10 @@ if(ENABLE_MPI)
 endif()
 
 if(BUILD_TESTING)
-    add_custom_target(run_test_${NICE_SOURCE_DIR}
-        DEPENDS ${EXECUTABLE_NAME}
-        COMMAND ${EXECUTABLE_NAME} tmp 1.e-5 100 80.0 40 1.e-3 101 > test/output.dat
+    add_custom_target(${PROJECT_NAME}_test
+        ALL
+        DEPENDS ${PROJECT_NAME}
+        COMMAND ${PROJECT_NAME} tmp 1.e-5 100 80.0 40 1.e-3 101 > test/output.dat
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
