added enable testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ message(${CMAKE_BUILD_TYPE})
 
 if (${CMAKE_BUILD_TYPE} STREQUAL "Test")
     set(BUILD_TESTING ON)
+    enable_testing()
 endif()
 
 # Compiler flags
