fix gitlab pipline

--- a/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
+++ b/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
@@ -76,7 +76,7 @@ message(${CMAKE_BUILD_TYPE})
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     message("GCC.")
     if(CYGWIN)
-        set(CMAKE_CXX_FLAGS "-Wa,-mbig-obj -std=c++11 -Wall -Wnon-virtual-dtor")
+        set(CMAKE_CXX_FLAGS "-DSINGLECELL -Wa,-mbig-obj -std=c++11 -Wall -Wnon-virtual-dtor")
     else()
         set(CMAKE_CXX_FLAGS "-std=c++11 -w")
         #set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
@@ -85,7 +85,7 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
     message("Clang.")
-    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
+    set(CMAKE_CXX_FLAGS "-DSINGLECELL -std=c++11 -Wall -Wnon-virtual-dtor")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
@@ -94,7 +94,7 @@ elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     add_definitions(/DSHAPEOP_MSVC)
     add_definitions(/DSHAPEOP_EXPORT)
     set(CMAKE_CXX_FLAGS "/bigobj /EHsc")
-    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ox /Ot /fp:fast /GS- /GL /DNDEBUG")
+    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ox /Ot /fp:fast /GS- /GL /DNDEBUG /DSINGLECELL")
     set(CMAKE_CXX_FLAGS_DEBUG "/MTd /DPLB_DEBUG")
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/LTCG /INCREMENTAL:NO /OPT:REF")
 else()
@@ -164,7 +164,7 @@ if(ENABLE_CUDA)
 
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_60")
     if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-        set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG --use_fast_math -lineinfo -g")
+        set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG -DSINGLECELL --use_fast_math -lineinfo -g")
         set(CMAKE_CUDA_FLAGS_DEBUG "-O0 -G -g")
     endif()
 endif()
