multi geomety red blood cell

--- a/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
+++ b/examples/showCases/bloodFlowDefoBodies/CMakeLists.txt
@@ -53,9 +53,8 @@ project(bloodFlowDefoBodies)
 
 enable_language(CXX)
 
-option(ENABLE_CUDA "Enabling CUDA" ON)
+option(ENABLE_CUDA "Enabling CUDA" OFF)
 if(ENABLE_CUDA)
-  find_package(CUDA)
   enable_language(CUDA)
 endif()
 
@@ -76,16 +75,16 @@ message(${CMAKE_BUILD_TYPE})
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     message("GCC.")
     if(CYGWIN)
-        set(CMAKE_CXX_FLAGS "-DSINGLECELL -Wa,-mbig-obj -std=c++11 -Wall -Wnon-virtual-dtor")
+        set(CMAKE_CXX_FLAGS "-Wa,-mbig-obj -std=c++11 -Wall -Wnon-virtual-dtor")
     else()
         set(CMAKE_CXX_FLAGS "-std=c++11 -w")
         #set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
     endif()
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
     message("Clang.")
-    set(CMAKE_CXX_FLAGS "-DSINGLECELL -std=c++11 -Wall -Wnon-virtual-dtor")
+    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wnon-virtual-dtor")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -DPLB_DEBUG -O0")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
@@ -94,7 +93,7 @@ elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     add_definitions(/DSHAPEOP_MSVC)
     add_definitions(/DSHAPEOP_EXPORT)
     set(CMAKE_CXX_FLAGS "/bigobj /EHsc")
-    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ox /Ot /fp:fast /GS- /GL /DNDEBUG /DSINGLECELL")
+    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ox /Ot /fp:fast /GS- /GL /DNDEBUG")
     set(CMAKE_CXX_FLAGS_DEBUG "/MTd /DPLB_DEBUG")
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/LTCG /INCREMENTAL:NO /OPT:REF")
 else()
@@ -164,7 +163,7 @@ if(ENABLE_CUDA)
 
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_60")
     if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-        set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG -DSINGLECELL --use_fast_math -lineinfo -g")
+        set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG --use_fast_math -lineinfo -g")
         set(CMAKE_CUDA_FLAGS_DEBUG "-O0 -G -g")
     endif()
 endif()
@@ -205,10 +204,10 @@ if(ENABLE_CUDA)
     # cu files
     file(GLOB NPFEM_CUDA_SOURCES_CPP "../../../coupledSimulators/npFEM/src_GPU/*.cpp")
     file(GLOB NPFEM_CUDA_SOURCES_CU  "../../../coupledSimulators/npFEM/src_GPU/*.cu")
-    set(NPFEM_CUDA_SOURCES ${NPFEM_CUDA_SOURCES_CPP} ${NPFEM_CUDA_SOURCES_CU})
+    set(NPFEM_CUDA_SOURCES ${NPFEM_CUDA_SOURCES_CPP} ${NPFEM_CUDA_SOURCES_CU})  
 endif()
 
-# By adding the NPFEM_H, we manage to show the headers in a separate folder
+# By adding the NPFEM_H, we manage to show the headers in a separate folder 
 # in the project tree (quite handy for development)
 
 if(NOT ENABLE_CUDA)
@@ -234,7 +233,6 @@ endif()
 
 # GPU Version of the code
 if(ENABLE_CUDA)
-	message("cuda or not ?")
     add_executable(${EXECUTABLE_NAME_GPU} EXCLUDE_FROM_ALL "./${EXECUTABLE_NAME}.cpp" ${DEPS_H} ${PARAMS_1} ${PARAMS_2})
     target_compile_options(${EXECUTABLE_NAME_GPU} PUBLIC -DNPFEM_CUDA=1)
     set_property(TARGET ${EXECUTABLE_NAME_GPU} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
