--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ enable_language(CXX)
 
 # This compiles Palabos library and all the examples
 # It is used mainly for Continuous Integration (CI)
-set(CI ON CACHE BOOL "Compile Everything (Continuous Integration)")
+option(CI "Compile Everything (Continuous Integration)" ON)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
@@ -94,88 +94,90 @@ cmake_policy(SET CMP0079 NEW)
 ###############################################################################
 # examples directory
 ###############################################################################
-# benchmarks
-add_subdirectory(examples/benchmarks/cavity3d)
-# codesByTopic
-add_subdirectory(examples/codesByTopic/asinariDynamics)
-add_subdirectory(examples/codesByTopic/bounceBack)
-add_subdirectory(examples/codesByTopic/boundaryCondition)
-add_subdirectory(examples/codesByTopic/complexNumbers)
-add_subdirectory(examples/codesByTopic/coProcessor)
-add_subdirectory(examples/codesByTopic/copying)
-add_subdirectory(examples/codesByTopic/couplings)
-add_subdirectory(examples/codesByTopic/cutTriangularSurface)
-add_subdirectory(examples/codesByTopic/d3q13)
-add_subdirectory(examples/codesByTopic/dataAnalysis)
-add_subdirectory(examples/codesByTopic/dotList)
-add_subdirectory(examples/codesByTopic/dynamicsInfo)
-add_subdirectory(examples/codesByTopic/externalMacroscopicVariables)
-add_subdirectory(examples/codesByTopic/io)
-add_subdirectory(examples/codesByTopic/linearAlgebra)
-add_subdirectory(examples/codesByTopic/marchingCube)
-add_subdirectory(examples/codesByTopic/multiBlock)
-add_subdirectory(examples/codesByTopic/navierStokesModels)
-add_subdirectory(examples/codesByTopic/particlesInTube)
-add_subdirectory(examples/codesByTopic/reparallelize)
-add_subdirectory(examples/codesByTopic/scalarField)
-add_subdirectory(examples/codesByTopic/shanChenMultiPhase)
-add_subdirectory(examples/codesByTopic/smagorinskyModel)
-add_subdirectory(examples/codesByTopic/transientStatistics)
-add_subdirectory(examples/codesByTopic/userInput)
-add_subdirectory(examples/codesByTopic/aneurysm_xdmf_hdf5_output)
-add_subdirectory(examples/codesByTopic/TRTdynamics)
-# showCases
-add_subdirectory(examples/showCases/aneurysm)
-add_subdirectory(examples/showCases/bloodFlowDefoBodies)
-add_subdirectory(examples/showCases/boussinesqThermal2d)
-add_subdirectory(examples/showCases/boussinesqThermal3d)
-add_subdirectory(examples/showCases/carreauPoiseuille)
-add_subdirectory(examples/showCases/cavity2d)
-add_subdirectory(examples/showCases/cavity3d)
-add_subdirectory(examples/showCases/collidingBubbles3d)
-add_subdirectory(examples/showCases/cylinder2d)
-add_subdirectory(examples/showCases/cylinder3d)
-add_subdirectory(examples/showCases/externalFlowAroundObstacle)
-add_subdirectory(examples/showCases/generalExternalFlow)
-add_subdirectory(examples/showCases/gridRefinement2d)
-add_subdirectory(examples/showCases/gridRefinement3d)
-add_subdirectory(examples/showCases/heatedObjectInChannel)
-add_subdirectory(examples/showCases/movingWall)
-add_subdirectory(examples/showCases/multiComponent2d)
-add_subdirectory(examples/showCases/multiComponent3d)
-add_subdirectory(examples/showCases/particlesInCone)
-add_subdirectory(examples/showCases/poiseuille)
-add_subdirectory(examples/showCases/rectangularChannel3d)
-add_subdirectory(examples/showCases/vofMultiPhase)
-add_subdirectory(examples/showCases/womersley)
-# tutorial
-add_subdirectory(examples/tutorial/permeability)
-add_subdirectory(examples/tutorial/tutorial_1)
-add_subdirectory(examples/tutorial/tutorial_2)
+if(CI)
+    # benchmarks
+    add_subdirectory(examples/benchmarks/cavity3d)
+    # codesByTopic
+    add_subdirectory(examples/codesByTopic/asinariDynamics)
+    add_subdirectory(examples/codesByTopic/bounceBack)
+    add_subdirectory(examples/codesByTopic/boundaryCondition)
+    add_subdirectory(examples/codesByTopic/complexNumbers)
+    add_subdirectory(examples/codesByTopic/coProcessor)
+    add_subdirectory(examples/codesByTopic/copying)
+    add_subdirectory(examples/codesByTopic/couplings)
+    add_subdirectory(examples/codesByTopic/cutTriangularSurface)
+    add_subdirectory(examples/codesByTopic/d3q13)
+    add_subdirectory(examples/codesByTopic/dataAnalysis)
+    add_subdirectory(examples/codesByTopic/dotList)
+    add_subdirectory(examples/codesByTopic/dynamicsInfo)
+    add_subdirectory(examples/codesByTopic/externalMacroscopicVariables)
+    add_subdirectory(examples/codesByTopic/io)
+    add_subdirectory(examples/codesByTopic/linearAlgebra)
+    add_subdirectory(examples/codesByTopic/marchingCube)
+    add_subdirectory(examples/codesByTopic/multiBlock)
+    add_subdirectory(examples/codesByTopic/navierStokesModels)
+    add_subdirectory(examples/codesByTopic/particlesInTube)
+    add_subdirectory(examples/codesByTopic/reparallelize)
+    add_subdirectory(examples/codesByTopic/scalarField)
+    add_subdirectory(examples/codesByTopic/shanChenMultiPhase)
+    add_subdirectory(examples/codesByTopic/smagorinskyModel)
+    add_subdirectory(examples/codesByTopic/transientStatistics)
+    add_subdirectory(examples/codesByTopic/userInput)
+    add_subdirectory(examples/codesByTopic/aneurysm_xdmf_hdf5_output)
+    add_subdirectory(examples/codesByTopic/TRTdynamics)
+    # showCases
+    add_subdirectory(examples/showCases/aneurysm)
+    add_subdirectory(examples/showCases/bloodFlowDefoBodies)
+    add_subdirectory(examples/showCases/boussinesqThermal2d)
+    add_subdirectory(examples/showCases/boussinesqThermal3d)
+    add_subdirectory(examples/showCases/carreauPoiseuille)
+    add_subdirectory(examples/showCases/cavity2d)
+    add_subdirectory(examples/showCases/cavity3d)
+    add_subdirectory(examples/showCases/collidingBubbles3d)
+    add_subdirectory(examples/showCases/cylinder2d)
+    add_subdirectory(examples/showCases/cylinder3d)
+    add_subdirectory(examples/showCases/externalFlowAroundObstacle)
+    add_subdirectory(examples/showCases/generalExternalFlow)
+    add_subdirectory(examples/showCases/gridRefinement2d)
+    add_subdirectory(examples/showCases/gridRefinement3d)
+    add_subdirectory(examples/showCases/heatedObjectInChannel)
+    add_subdirectory(examples/showCases/movingWall)
+    add_subdirectory(examples/showCases/multiComponent2d)
+    add_subdirectory(examples/showCases/multiComponent3d)
+    add_subdirectory(examples/showCases/particlesInCone)
+    add_subdirectory(examples/showCases/poiseuille)
+    add_subdirectory(examples/showCases/rectangularChannel3d)
+    add_subdirectory(examples/showCases/vofMultiPhase)
+    add_subdirectory(examples/showCases/womersley)
+    # tutorial
+    add_subdirectory(examples/tutorial/permeability)
+    add_subdirectory(examples/tutorial/tutorial_1)
+    add_subdirectory(examples/tutorial/tutorial_2)
 
-###############################################################################
-# utility directory
-###############################################################################
-# stl
-add_subdirectory(utility/stl/cutSTL)
-add_subdirectory(utility/stl/mergeSTL)
-add_subdirectory(utility/stl/refineByAreaSTL)
-add_subdirectory(utility/stl/refineSTL)
-add_subdirectory(utility/stl/reverseOrientationSTL)
-add_subdirectory(utility/stl/revoxelize)
-add_subdirectory(utility/stl/rotateAtOriginSTL)
-add_subdirectory(utility/stl/scaleDirectionallySTLraw)
-add_subdirectory(utility/stl/scaleSTL)
-add_subdirectory(utility/stl/scaleSTLraw)
-add_subdirectory(utility/stl/shiftSTLraw)
-add_subdirectory(utility/stl/stlCheck)
-add_subdirectory(utility/stl/stlInfo)
-add_subdirectory(utility/stl/stlProjectedArea)
-add_subdirectory(utility/stl/stlShadowArea)
-add_subdirectory(utility/stl/stlToHtml)
-add_subdirectory(utility/stl/stlToX3D)
-add_subdirectory(utility/stl/toAsciiSTL)
-add_subdirectory(utility/stl/toBinarySTL)
-# vtk
-add_subdirectory(utility/vtk/plb2vtk2D)
-add_subdirectory(utility/vtk/plb2vtk3D)
+    ###############################################################################
+    # utility directory
+    ###############################################################################
+    # stl
+    add_subdirectory(utility/stl/cutSTL)
+    add_subdirectory(utility/stl/mergeSTL)
+    add_subdirectory(utility/stl/refineByAreaSTL)
+    add_subdirectory(utility/stl/refineSTL)
+    add_subdirectory(utility/stl/reverseOrientationSTL)
+    add_subdirectory(utility/stl/revoxelize)
+    add_subdirectory(utility/stl/rotateAtOriginSTL)
+    add_subdirectory(utility/stl/scaleDirectionallySTLraw)
+    add_subdirectory(utility/stl/scaleSTL)
+    add_subdirectory(utility/stl/scaleSTLraw)
+    add_subdirectory(utility/stl/shiftSTLraw)
+    add_subdirectory(utility/stl/stlCheck)
+    add_subdirectory(utility/stl/stlInfo)
+    add_subdirectory(utility/stl/stlProjectedArea)
+    add_subdirectory(utility/stl/stlShadowArea)
+    add_subdirectory(utility/stl/stlToHtml)
+    add_subdirectory(utility/stl/stlToX3D)
+    add_subdirectory(utility/stl/toAsciiSTL)
+    add_subdirectory(utility/stl/toBinarySTL)
+    # vtk
+    add_subdirectory(utility/vtk/plb2vtk2D)
+    add_subdirectory(utility/vtk/plb2vtk3D)
+endif()
