added dsl2d/3d in cmakelists for CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,8 @@ add_subdirectory(examples/showCases/cavity3d)
 add_subdirectory(examples/showCases/collidingBubbles3d)
 add_subdirectory(examples/showCases/cylinder2d)
 add_subdirectory(examples/showCases/cylinder3d)
+add_subdirectory(examples/showCases/dsl2d)
+add_subdirectory(examples/showCases/dsl3d)
 add_subdirectory(examples/showCases/externalFlowAroundObstacle)
 add_subdirectory(examples/showCases/generalExternalFlow)
 add_subdirectory(examples/showCases/gridRefinement2d)
